clusters/minikube/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo
  namespace: default  # Make sure this is the correct namespace
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: podinfo
            port:
              number: 9898
